--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html, body {
     overflow-x: hidden;
     box-sizing: border-box;
     width: auto;
+    background-color: blue;
 }
 .dim{
 opacity: 0.5;
