--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html, body {
     overflow-x: hidden;
     box-sizing: border-box;
-    width: auto;
+/*     width: auto; */
     background-color: blue;
 }
 .dim{
