--- a/styles.css
+++ b/styles.css
@@ -115,13 +115,21 @@ input[type=checkbox]
   padding: 10px;
   margin-bottom: 5px;
  }
+ @media screen and (min-width: 768px) {
+     .form-check{
+       margin-bottom: 5px;
+     }
+   }
+@media screen and (max-width: 768px) {
+    .form-check{
+     margin-bottom: 15px;
+    }
+  }
 /* //////////////////////// END INCREASE CHECKBOX SIZE ////////////////////////////// */
-.form-check{
-  margin-bottom: 5px;
-}
+
 .vendorsContainer{
-  margin: 100px;
-}
+    margin: 100px;
+  }
 @media screen and (min-width: 768px) {
   footer .brdr{
     border-right: solid 2px;
